# slint-bundler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Test.yml
examples/native-lib/: .gitignore  Cargo.toml  build-rust.ps1  slint-app.json
examples/native-lib/android/: settings.gradle
examples/native-lib/android/app/: .gitignore  build.gradle
examples/native-lib/android/app/src/main/: AndroidManifest.xml
examples/native-lib/android/app/src/main/res/values/: strings.xml
examples/native-lib/src/: lib.rs  main.rs
examples/native-lib/ui/: app-window.slint  list-area.slint
examples/slint-app/: .gitignore  Cargo.toml  build.rs  slint-app.json
examples/slint-app/android/: settings.gradle
examples/slint-app/android/app/: build.gradle
examples/slint-app/android/app/src/main/: AndroidManifest.xml
examples/slint-app/src/: lib.rs  main.rs  player.rs
examples/slint-app/ui/: app-window.slint  list-area.slint
examples/slint-rust-template/: Cargo.toml  build.rs
examples/slint-rust-template/src/: main.rs
examples/slint_lib/: .gitignore  Cargo.toml
examples/slint_lib/android/app/src/main/: AndroidManifest.xml
examples/slint_lib/android/app/src/main/res/values/: strings.xml
examples/slint_lib/src/: lib.rs  main.rs
examples/slint_lib/ui/: app-window.slint
src/: bundle.rs  desktop.rs  dev.rs  icon.rs  main.rs
src/android/: init.rs  mod.rs
src/android/dev/: adb.rs  mod.rs
src/android/sign/: key.rs  mod.rs  windows.rs
src/android/tools/: bundletool.rs  gradle.rs  mod.rs
src/bundle/: linux.rs  mod.rs  windows.rs
src/bundle/android/: init.rs  mod.rs  utils.rs
src/bundle/android/dev/: mod.rs
src/bundle/android/tools/: bundletool.rs  gradle.rs
src/bundle/linux/: appimage.rs  deb_bundle.rs  desktop.rs  mod.rs  rpm_bundle.rs  tar_xz.rs  tar_zst.rs
src/bundle/windows/: mod.rs  msix_bundle.rs
src/bundle/windows/msi/: mod.rs
src/bundle/windows/nsis/: mod.rs
src/doctor/: mod.rs
src/help/: help.json  mod.rs
src/new/: mod.rs
src/utils/: buildtools.rs  mod.rs
tests/: examples_integration.rs
