[package]
name = "slint-bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
notify = "6.1"
which = "5.0"
thiserror = "1.0"
image = "0.25.8"
ico = "0.4.0"
icns = "0.3.1"
tempfile = "3.23.0"
flate2 = "1.0"


[target."cfg(target_os = \"linux\")".dependencies]
ar = "0.8"
rpm = { version = "0.16", features = ["bzip2-compression"] }
zstd = "0.11"
xz2 = "0.1"
tar = "0.4"

[target."cfg(target_os = \"windows\")".dependencies]
zip = "6"