[package]
name = "native_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]



[target."cfg(target_os = \"android\")".dependencies]
slint = {version = "1.14.1", features = ["std", "backend-android-activity-06"]}
# i-slint-backend-android-activity = "1.14.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".build-dependencies]
slint-build = {version = "1.14.1"}

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
slint = "1.14.1"

[profile.release]
opt-level = 3
strip = "debuginfo"
